daytrader-quotesapp/daytrader-quotes/env/external/k8s/daytrader-quotes-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: daytrader-quotes
  name: daytrader-quotes
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: daytrader-quotes
  template:
    metadata:
      labels:
        app: daytrader-quotes
    spec:
      containers:
      - name: daytrader-quotes
        image: dhvines/daytrader-quotes:4.0.18
        imagePullPolicy: Always
        ports:
        - containerPort: 4443
          protocol: TCP
        readinessProbe:  
          httpGet:
            path: /health
            scheme: HTTPS
            port: 4443
        livenessProbe:  
          httpGet:
            path: /health
            scheme: HTTPS
            port: 4443
