daytrader-quotesapp/daytrader-quotes/env/external/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: daytrader-quotes
  name: daytrader-quotes
  namespace: default
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 4443
  selector:
    app: daytrader-quotes
  sessionAffinity: None
  type: ClusterIP
